# django-tasks-local-db

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
django_tasks_local_db/: __init__.py  admin.py  apps.py  backend.py  models.py  signal_handlers.py  state.py  utils.py
django_tasks_local_db/migrations/: 0001_initial.py  0002_alter_dbtaskresult_options_and_more.py  0003_alter_dbtaskresult_options_and_more.py  0004_dbtaskresult_last_heartbeat_at_and_more.py
tests/: conftest.py  settings.py  tasks.py  test_admin.py  test_api_contract.py  test_backend.py  test_benchmarks.py  test_concurrent_recovery.py  test_db_errors.py  test_deferred.py  test_models.py  test_recovery_bugs.py  test_shutdown.py  test_signals.py  test_thread_pool.py
