[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "django-tasks-local-db"
version = "0.1.0"
description = "Django Tasks backend combining in-process thread pool execution with database persistence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]
postgres = [
    "psycopg[binary]",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
